<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <EditText
            android:id="@+id/name_et"
            android:layout_width="match_parent"
              android:layout_height="wrap_content"
    android:hint="@string/name"
    android:layout_marginTop="20dp"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"/>

    <EditText
            android:id="@+id/address_et"
            android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:hint="@string/address"
              android:layout_marginTop="20dp"
              android:layout_marginStart="20dp"
              android:layout_marginEnd="20dp"/>

    <EditText
            android:id="@+id/salary_et"
            android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:hint="@string/salary"
              android:layout_marginTop="20dp"
              android:layout_marginStart="20dp"
              android:layout_marginEnd="20dp"/>

    <EditText
            android:id="@+id/job_et"
            android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:hint="@string/job"
              android:layout_marginTop="20dp"
              android:layout_marginStart="20dp"
              android:layout_marginEnd="20dp"/>

    <Button
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
    android:text="@string/save"
    android:textSize="20dp"
    android:textAllCaps="false"
    android:layout_gravity="center"
    android:layout_marginTop="50dp"/>

</LinearLayout>