<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Main_Activity"
        android:orientation="vertical">

    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
    android:text="@string/welcome"
    android:textSize="30dp"
    android:gravity="center"
    android:layout_marginTop="10dp"/>

    <EditText
            android:id="@+id/user"
            android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:hint="@string/user"
    android:layout_marginTop="40sp"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"/>

    <EditText
            android:id="@+id/pass"
            android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:hint="@string/pass"
              android:layout_marginTop="40sp"
              android:layout_marginStart="20dp"
              android:layout_marginEnd="20dp"/>

    <Button
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:text="@string/log"
    android:textSize="20dp"
    android:textAllCaps="false"
    android:layout_marginTop="30dp"/>





</LinearLayout>