<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginTop="20dp">
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/id"
                  android:layout_marginStart="20dp"
                  android:textSize="20dp"
        />

        <TextView
                android:id="@+id/id_tv"
                android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/id"
                  android:layout_marginStart="20dp"
                  android:textSize="20dp"
        />

    </LinearLayout>

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:layout_marginTop="20dp">
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/name"
                  android:layout_marginStart="20dp"
                  android:textSize="20dp"
        />

        <TextView
                android:id="@+id/name_tv"
                android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/name"
                  android:layout_marginStart="20dp"
                  android:textSize="20dp"
        />

    </LinearLayout>

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:layout_marginTop="20dp">
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/address"
                  android:layout_marginStart="20dp"
                  android:textSize="20dp"
        />

        <TextView
                android:id="@+id/address_tv"
                android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/address"
                  android:layout_marginStart="20dp"
                  android:textSize="20dp"
        />

    </LinearLayout>

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:layout_marginTop="20dp">
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/salary"
                  android:layout_marginStart="20dp"
                  android:textSize="20dp"
        />

        <TextView
                android:id="@+id/salary_tv"
                android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/salary"
                  android:layout_marginStart="20dp"
                  android:textSize="20dp"
        />

    </LinearLayout>

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:layout_marginTop="20dp">
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/job"
                  android:layout_marginStart="20dp"
                  android:textSize="20dp"
        />

        <TextView
                android:id="@+id/job_tv"
                android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/job"
                  android:layout_marginStart="20dp"
                  android:textSize="20dp"
        />

    </LinearLayout>

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:gravity="center"
                  android:layout_marginTop="40sp"
    >

        <Button
                android:id="@+id/update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/update"
                android:textAllCaps="false"
        />
        <Button
                android:id="@+id/delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete"
                android:textAllCaps="false"
                android:layout_marginStart="10dp"
        />
    </LinearLayout>

</LinearLayout>